fix hover state of visible upload button

--- a/src/views/themes/default/sass/global/partials/_appearance.sass
+++ b/src/views/themes/default/sass/global/partials/_appearance.sass
@@ -167,6 +167,10 @@ span.button, a.button
 input.button, button
   @extend %real-button
 
+input.file:hover + a.button,
+input.file:hover + span.button
+  text-decoration: none
+
 #gallery, .files
   list-style: none
   a
